netplan-parser: drop the .py extension.
We can't tell setuptools to install the script without the extension,
so drop it in the source.

--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,4 @@ commands = ostestr {posargs}
 basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
-  flake8 {posargs} bin netplan unit_tests
+  flake8 {posargs} bin/netplan-parser netplan unit_tests
