Add type hints.

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,38 @@
 [tox]
-envlist = pep8,unit_tests_2,unit_tests_3
+envlist = pep8,mypy_2,mypy_3,unit_tests_2,unit_tests_3
 skipsdist = True
+
+[testenv:mypy_2]
+basepython = python3
+deps = mypy
+commands =
+  mypy --disallow-untyped-defs --disallow-untyped-calls --py2 netplan
+  mypy --disallow-untyped-defs --disallow-untyped-calls --ignore-missing-imports --py2 unit_tests
+
+[testenv:mypy_3]
+basepython = python3
+deps = mypy
+commands =
+  mypy --strict netplan
+  mypy --strict --ignore-missing-imports --allow-untyped-decorators unit_tests
 
 [testenv:unit_tests_2]
 basepython = python2
-deps = -r{toxinidir}/test-requirements.txt
+deps =
+  ddt
+  os-testr
+  typing
 commands = ostestr {posargs}
 
 [testenv:unit_tests_3]
 basepython = python3
-deps = -r{toxinidir}/test-requirements.txt
+deps =
+  ddt
+  os-testr
 commands = ostestr {posargs}
 
 [testenv:pep8]
 basepython = python3
-deps = -r{toxinidir}/test-requirements.txt
+deps = flake8
 commands =
   flake8 {posargs} bin/netplan-parser netplan unit_tests
