Fix some pylint nits.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pep8,mypy_2,mypy_3,unit_tests_2,unit_tests_3
+envlist = pep8,mypy_2,mypy_3,unit_tests_2,unit_tests_3,pylint
 skipsdist = True
 
 [testenv:mypy_2]
@@ -36,3 +36,12 @@ basepython = python3
 deps = flake8
 commands =
   flake8 {posargs} bin/netplan-parser netplan unit_tests
+
+[testenv:pylint]
+basepython = python3
+deps =
+  ddt
+  pylint
+  PyYAML
+commands =
+  pylint --disable=fixme,useless-object-inheritance netplan unit_tests
