Add a simple adequate autopkgtest.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -5,3 +5,6 @@ Restrictions: allow-stderr
 Test-Command: set -e; mkdir testing; cd testing; ln -s ../test_data ./; ln -s ../unit_tests ./; mkdir bin; ln -s /usr/bin/netplan-parser bin/; python3 -m unittest discover -v
 Depends: @, python3-ddt
 Restrictions: allow-stderr
+
+Test-Command: adequate python-netplan python3-netplan netplan-parser
+Depends: @, adequate
