Reformat the source code using black.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pep8,mypy_2,mypy_3,unit_tests_2,unit_tests_3,pylint
+envlist = pep8,mypy_2,mypy_3,unit_tests_2,unit_tests_3,pylint,black
 skipsdist = True
 
 [testenv:mypy_2]
@@ -44,4 +44,16 @@ deps =
   pylint
   PyYAML
 commands =
-  pylint --disable=fixme,useless-object-inheritance netplan unit_tests
+  pylint --disable=fixme,useless-object-inheritance,bad-continuation netplan unit_tests
+
+[testenv:black]
+basepython = python3
+deps =
+  black
+commands = black --check --line-length 79 setup.py netplan unit_tests
+
+[testenv:black_reformat]
+basepython = python3
+deps =
+  black
+commands = black --line-length 79 setup.py netplan unit_tests
