--- a/tox.ini
+++ b/tox.ini
@@ -20,16 +20,18 @@ commands =
 basepython = python2
 deps =
   ddt
-  os-testr
+  pytest
+  PyYAML
   typing
-commands = ostestr {posargs}
+commands = pytest -s -vv {posargs}
 
 [testenv:unit_tests_3]
 basepython = python3
 deps =
   ddt
-  os-testr
-commands = ostestr {posargs}
+  pytest
+  PyYAML
+commands = pytest -s -vv {posargs}
 
 [testenv:pep8]
 basepython = python3
