Simplify the unit tests.

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ basepython = python3
 deps =
   ddt
   pylint
+  pytest
   PyYAML
 commands =
   pylint --disable=fixme,useless-object-inheritance,bad-continuation netplan unit_tests
