remove python2 and update deps for tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,15 @@
 [tox]
-envlist = pep8,mypy_2,mypy_3,unit_tests_2,unit_tests_3,pylint,black
+envlist = pep8,mypy_3,unit_tests_3,pylint,black
 skipsdist = True
-
-[testenv:mypy_2]
-basepython = python3
-deps = mypy
-commands =
-  mypy --disallow-untyped-defs --disallow-untyped-calls --py2 netplan
-  mypy --disallow-untyped-defs --disallow-untyped-calls --ignore-missing-imports --py2 unit_tests
 
 [testenv:mypy_3]
 basepython = python3
-deps = mypy
+deps =
+  mypy
+  types-PyYAML
 commands =
   mypy --strict netplan
   mypy --strict --ignore-missing-imports --allow-untyped-decorators unit_tests
-
-[testenv:unit_tests_2]
-basepython = python2
-deps =
-  ddt
-  pytest
-  PyYAML
-  typing
-commands = pytest -s -vv {posargs}
 
 [testenv:unit_tests_3]
 basepython = python3
@@ -37,7 +23,7 @@ commands = pytest -s -vv {posargs}
 basepython = python3
 deps = flake8
 commands =
-  flake8 {posargs} bin/netplan-parser netplan unit_tests
+  flake8 --max-line-length=100 {posargs} bin/netplan-parser netplan unit_tests
 
 [testenv:pylint]
 basepython = python3
@@ -53,10 +39,10 @@ commands =
 basepython = python3
 deps =
   black
-commands = black --check --line-length 79 setup.py netplan unit_tests
+commands = black --check --line-length 100 setup.py netplan unit_tests
 
 [testenv:black_reformat]
 basepython = python3
 deps =
   black
-commands = black --line-length 79 setup.py netplan unit_tests
+commands = black --line-length 100 setup.py netplan unit_tests
